// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`about should stay calm 1`] = `
Array [
  <h1
    class="text-2xl my-3 p-5 text-center lg:text-3xl lg:p-9 lg:my-3"
  >
    ⚡️Talexy
  </h1>,
]
`;

exports[`about should title render 1`] = `
<h1
  class="text-2xl my-3 p-5 text-center lg:text-3xl lg:p-9 lg:my-3"
>
  ⚡️Talexy
</h1>
`;
